# LTSpice-MCP

./: .gitignore  .ruffignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MCP.md  OPENCODE.md  README.md  config.example.toml  ltspice_file_based_live_editing_math_plan.md  pyproject.toml
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/sidecar/: ltagent  ltagent-engine  ltagent-mcp  ltagent.py
apps/desktop/src/: App.test.tsx  App.tsx  engine.ts  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: AIPanel.tsx  AppHeader.tsx  BottomPanel.tsx  ComponentLibrary.test.tsx  ComponentLibrary.tsx  Explorer.tsx  Inspector.tsx  ProjectDialog.tsx  SchematicSymbol.tsx  WorkspaceShell.tsx  WorkspaceSurface.tsx  componentRegistry.test.ts  componentRegistry.ts
docs/: AGENT_LOCKS.md  AI_HARDWARE_AGENT_ROADMAP.md  ALPHA_PLAYBOOK.md  ANALOG_ENGINE.md  ARCHITECTURE.md  DIGITAL_ENGINE.md  MCP_TOOLS.md  PROJECT_PLAN.md  RELEASE_ARTIFACTS.md  RELEASE_NOTES.md  REPO_AUDIT.md  SECURITY_MODEL.md  SINGLE_AGENT_EXECUTION_PLAN.md  SPEC.md  SUPERVISOR_EXECUTION_PLAN.md  agent_workflow.md  live_editing.md  ltspice_setup.md  math_core.md  mcp_setup.md  runner.md  runner_troubleshooting.md  security.md  workbench_desktop.md
docs/adr/: 0004-hybrid-hdl-spice.md  0005-workbench-desktop-sidecar.md  0006-workbench-v1-ai-integration.md
docs/agent_reports/: circuit_graph.md  docs.md  edit_ops.md  final-audit.md  integration_final.md  integrator.md  live_project_snapshot.md  mcp_tools.md  phase0-baseline.md  phase0-exit-gate.md  phase1-exit-gate.md  phase10-exit-gate.md  phase11-exit-gate.md  phase8-exit-gate.md  phase9-exit-gate.md  review-exit-gate.md  sim_verification.md
docs/digital/: plan-tiny8-agent.md  roadmap.md  toolchain.md
docs/examples/: ldr_dark_detector_workflow.md  noninv_opamp_calculation.md  rc_lowpass_live_edit.md
examples/: bridge_rectifier.ir.json  comparator.ir.json  diode_clipper.ir.json  halfwave_rectifier.ir.json  inverting_opamp.ir.json  led_resistor.ir.json  noninv_opamp.ir.json  rc_highpass.asc  rc_highpass.ir.json  rc_lowpass.asc  rc_lowpass.ir.json  transistor_switch.ir.json  voltage_divider.asc  voltage_divider.ir.json
examples/digital/: tiny8_add.design.json  tiny8_io.design.json  tiny8_loop.design.json
schemas/: circuit_ir.schema.json
schemas/workbench_v2/: AnalogGraph.schema.json  HardwareProject.schema.json  Requirements.schema.json  SystemSpec.schema.json
scripts/: build_sidecar.py  release_manifest.py  smoke_codex.py  smoke_desktop_bundle.py  smoke_workbench_v2.py
src/ltagent/: __init__.py  __main__.py  ai_provider.py  ai_workflow.py  analog_workbench.py  asc.py  cli.py  codex_install.py  config.py  design_service.py  digital_asm.py  digital_emulator.py  digital_generator.py  digital_ir.py  digital_ir_v2.py  digital_planner.py  digital_project.py  digital_reports.py  digital_runner.py  digital_templates.py  digital_workbench.py  doctor.py  engine_server.py  evaluator.py  ir.py  jobs.py  layout.py  layout_checker.py  led_matrix.py  log_parser.py  mcp_live_tools.py  mcp_server.py  mcp_workbench_tools.py  netlist.py  ngspice_runner.py  planner.py  project.py  projects_root.py  result.py  runner.py  (+10 more)
src/ltagent/live/: __init__.py  edit_ops.py  edit_result.py  graph.py  graph_schema.py  graph_to_ir.py  graph_validation.py  history.py  ir_to_graph.py  measurements.py  project.py  sim_loop.py  snapshot.py  verification.py
src/ltagent/math_core/: __init__.py  api.py  calculation_report.py  formulas.py  standard_values.py  units.py  verification_math.py
src/ltagent/resources/: __init__.py
src/ltagent/resources/workbench_v2/: DigitalDesignDocument.schema.json  SchematicView.schema.json
tests/: _testdata.py  conftest.py  test_ai_provider.py  test_ai_workflow.py  test_analog_mvp_acceptance.py  test_analog_workbench.py  test_asc.py  test_cli.py  test_cli_create.py  test_cli_digital.py  test_cli_phase4.py  test_config.py  test_design_service.py  test_digital_asm.py  test_digital_emulator.py  test_digital_generator.py  test_digital_ir.py  test_digital_ir_v2.py  test_digital_planner.py  test_digital_project.py  test_digital_roadmap.py  test_digital_runner.py  test_digital_workbench.py  test_doctor.py  test_engine_server.py  test_evaluator.py  test_graph_to_ir.py  test_ir_load.py  test_ir_to_graph.py  test_ir_validate.py  test_jobs.py  test_layout.py  test_layout_checker.py  test_led_matrix.py  test_live_edit_ops.py  test_live_graph.py  test_live_project.py  test_live_run_project.py  test_live_service.py  test_live_snapshot.py  (+33 more)
tests/fixtures/invalid/: bad_measurement.json  bad_name.json  bad_probe.json  bad_schema_version.json  bad_topology.json  duplicate_component_id.json  empty_components.json  mismatched_prefix.json  missing_analysis.json  missing_ground.json  source_value_missing.json  unknown_field.json  unknown_node.json  unsafe_directive.json  wrong_arity.json
tools/: generate_schema.py  generate_workbench_schema.py
