[package]
name = "ltagent-workbench-desktop"
version = "0.1.0"
description = "Local-first Hardware Design Workbench desktop host"
authors = ["abiyulinx"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri's Linux runtime reaches D-Bus through tao.  Build the small C library
# from source so local development does not require a system libdbus-dev package.
libdbus-sys = { version = "0.2", features = ["vendored"] }
serde_json = "1"
tauri = { version = "2", features = [] }
